# matrix

./: CMakeLists.txt  README.md  matrix_test.cpp
include/: matrix.h  trace_help.h
tests/: CMakeLists.txt  unit_tests_main.cpp
